--- a/src/app/components/side-bar/side-bar.component.html
+++ b/src/app/components/side-bar/side-bar.component.html
@@ -29,3 +29,6 @@
   </mat-expansion-panel> 
 </mat-accordion>
  
+<div>
+  <button mat-button color="primary" (click)="storeTest()">Side Bar</button> 
+</div>
