--- a/src/app/components/addfriend/addfriend.component.html
+++ b/src/app/components/addfriend/addfriend.component.html
@@ -8,7 +8,7 @@
      <p matLine *ngIf="isSent[i]">
         <span>친구요청</span>
      <p>
-     <p matLine *ngIf="isfriends[i]">
+     <p matLine *ngIf="isFriends[i]">
         <span>친구</span>
      <p>
      <button mat-icon-button (click)="addfriend(user)" *ngIf="canShow(i)">
