--- a/src/app/components/side-bar/side-bar.component.html
+++ b/src/app/components/side-bar/side-bar.component.html
@@ -21,14 +21,16 @@
      <app-requests></app-requests>
   </mat-expansion-panel> 
 
+ 
   <mat-expansion-panel hidetoggle="true" expanded="true">
      <mat-expansion-panel-header>
         친구목록
      </mat-expansion-panel-header>
      <app-myfriend></app-myfriend>
   </mat-expansion-panel> 
+  
 </mat-accordion>
  
 <div>
-  <button mat-button color="primary" (click)="storeTest()">Side Bar</button> 
+  <button mat-flat-button color="primary" (click)="storeTest()">Side Bar</button> 
 </div>
