--- a/src/app/components/addfriend/addfriend.component.html
+++ b/src/app/components/addfriend/addfriend.component.html
@@ -1,3 +1,7 @@
+<mat-form-field>
+  <input matInput placeholder="친구찿기" (keyup)="instantSearch($event)">
+</mat-form-field>
+
 <mat-list>
    <mat-list-item *ngFor="let user of users; let i = index">
      <img matListAvatar [src]="user.photoURL">
