--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -3,4 +3,7 @@
    <div fxFlex="25%">
        <app-side-bar></app-side-bar>
    </div>
+   <div fxFlex="50%">
+       <app-chat-feed></app-chat-feed>
+   </div>
 </div>
