--- a/src/app/components/chat-feed/chat-feed.component.html
+++ b/src/app/components/chat-feed/chat-feed.component.html
@@ -1,10 +1,77 @@
-<div *ngIf="showChat">
-   <mat-list>
-       <mat-list-item *ngFor="let message of messages">
-       {{ message.message}}
-       </mat-list-item>
-   </mat-list>
+<div class="container-fluid h-100"  *ngIf="showChat">
+<div class="row justify-content-center h-100">
+ 
+  <!-- <div class="col-md-8 col-xl-6 chat">  -->
+  <div class="col-lg-12 chat">
+    <div class="card">
+
+						<div class="card-header msg_head">
+							<div class="d-flex bd-highlight">
+								<div class="img_cont">
+									<img [src]="currentChatUser.photoURL" class="rounded-circle user_img">
+									<span class="online_icon"></span>
+								</div>
+								<div class="user_info">
+									<span>{{currentChatUser.displayName}}</span>
+									<p>1767 Messages</p>
+								</div>
+								<div class="video_cam">
+									<span><i class="fas fa-video"></i></span>
+									<span><i class="fas fa-phone"></i></span>
+								</div>
+							</div>
+							<span id="action_menu_btn"><i class="fas fa-ellipsis-v"></i></span>
+							<div class="action_menu">
+								<ul>
+									<li><i class="fas fa-user-circle"></i> View profile</li>
+									<li><i class="fas fa-users"></i> Add to close friends</li>
+									<li><i class="fas fa-plus"></i> Add to group</li>
+									<li><i class="fas fa-ban"></i> Block</li>
+								</ul>
+							</div>
+						</div>
+
+    
+      <div class="card-body msg_card_body">
+         <div   *ngFor="let msg of messages">
+        <div class="d-flex justify-content-start mb-4" *ngIf="msg.sentBy === MyId">
+          <div class="img_cont_msg">
+            <img [src]="MyAvatar" class="rounded-circle user_img_msg">
+          </div>
+          <div class="msg_cotainer">
+              {{msg.message}}
+            <span class="msg_time">8:40 AM, Today</span>
+          </div>
+        </div>
+        <div class="d-flex justify-content-end mb-4"  *ngIf="msg.sentBy !== MyId">
+          <div class="msg_cotainer_send">
+            {{currentChatUser.message}}
+            <span class="msg_time_send">8:55 AM, Today</span>
+          </div>
+          <div class="img_cont_msg">
+        <img [src]="currentChatUser.photoURL" class="rounded-circle user_img_msg">
+          </div>
+        </div>
+        </div>
+      </div>
+   
+      <div class="card-footer">
+        <div class="input-group">
+          <div class="input-group-append">
+            <span class="input-group-text attach_btn">
+              <i class="fas fa-paperclip"></i>             
+              <mat-icon >add_link</mat-icon>
+              </span>
+          </div>
+          <textarea name="" class="form-control type_msg" placeholder="메세지....." [(ngModel)]="newmessage"></textarea>
+          <div class="input-group-append">
+            <span class="input-group-text send_btn" (click)="addMessage()">
+               <mat-icon >add_circle</mat-icon>
+            </span>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
-<footer class="footer"  *ngIf="showChat">
-  <app-footer></app-footer>
-</footer>
+</div>
