--- a/src/app/components/chat-feed/chat-feed.component.scss
+++ b/src/app/components/chat-feed/chat-feed.component.scss
@@ -1,121 +1,263 @@
-.footer {
-  height: 50px;
-}
-
-.content {
-  max-height: calc(100vh - 145px);
-  overflow-y: scroll;
-  /* 80px header + 40px footer = 120px  */
-}
-
-.content::-webkt-scrollbar {
-  display: none;
-}
-
-#chat {
-  width: 100%;
-  max-width: 1440px;
+:host {
   height: 100%;
-  margin: 0 auto;
-  background: #f7f8fb;
-  font-size: 15px;
-  line-height: 22px;
-  overflow: scroll;
+  margin: 0;
+  background: #7F7FD5;
+  background: -webkit-linear-gradient(to right, #91EAE4, #86A8E7, #7F7FD5);
+  background: linear-gradient(to right, #91EAE4, #86A8E7, #7F7FD5);
 }
 
-#chat::-webkit-scrollbar {
-  display: none;
+.chat {
+  margin-top: auto;
+  margin-bottom: auto;
 }
 
-#chat .bubble {
-  margin-bottom: 2px;
-  padding-left: 5px;
-  padding-right: 5px;
+.card {
+  height: 500px;
+  border-radius: 15px !important;
+  background-color: rgba(0, 0, 0, 0.4) !important;
 }
 
-#chat .bubble::after {
-  clear: both;
+.contacts_body {
+  padding: 0.75rem 0 !important;
+  overflow-y: auto;
+  white-space: nowrap;
 }
 
-#chat .bubble .content {
-  background: #ffffff;
-  box-shadow: 0px 9px 30px 0px rgba(44, 46, 73, 0.08);
-  border-radius: 26px 26px 26px 2px;
-  max-width: 80%;
+.msg_card_body {
+  overflow-y: auto;
 }
 
-#chat .bubble .content::before,
-#chat .bubble .content::after {
-  content: '';
+.card-header {
+  border-radius: 15px 15px 0 0 !important;
+  border-bottom: 0 !important;
 }
 
-#chat .bubble .content::after {
-  clear: both;
+.card-footer {
+  border-radius: 0 0 15px 15px !important;
+  border-top: 0 !important;
 }
 
-#chat .bubble .content .avatar {
-  width: 40px;
+.container {
+  align-content: center;
+}
+
+.search {
+  border-radius: 15px 0 0 15px !important;
+  background-color: rgba(0, 0, 0, 0.3) !important;
+  border: 0 !important;
+  color: white !important;
+}
+
+.search:focus {
+  box-shadow: none !important;
+  outline: 0px !important;
+}
+
+.type_msg {
+  background-color: rgba(0, 0, 0, 0.3) !important;
+  border: 0 !important;
+  color: white !important;
+  height: 60px !important;
+  overflow-y: auto;
+}
+
+.type_msg:focus {
+  box-shadow: none !important;
+  outline: 0px !important;
+}
+
+.attach_btn {
+  border-radius: 15px 0 0 15px !important;
+  background-color: rgba(0, 0, 0, 0.3) !important;
+  border: 0 !important;
+  color: white !important;
+  cursor: pointer;
+}
+
+.send_btn {
+  border-radius: 0 15px 15px 0 !important;
+  background-color: rgba(0, 0, 0, 0.3) !important;
+  border: 0 !important;
+  color: white !important;
+  cursor: pointer;
+}
+
+.search_btn {
+  border-radius: 0 15px 15px 0 !important;
+  background-color: rgba(0, 0, 0, 0.3) !important;
+  border: 0 !important;
+  color: white !important;
+  cursor: pointer;
+}
+
+.contacts {
+  list-style: none;
+  padding: 0;
+}
+
+.contacts li {
+  width: 100% !important;
+  padding: 5px 10px;
+  margin-bottom: 15px !important;
+}
+
+.active {
+  background-color: rgba(0, 0, 0, 0.3);
+}
+
+.user_img {
+  height: 70px;
+  width: 70px;
+  border: 1.5px solid #f5f6fa;
+
+}
+
+.user_img_msg {
   height: 40px;
-  border-radius: 100%;
-  overflow: hiddenr;
-  float: left;
-  margin: 2em;
+  width: 40px;
+  border: 1.5px solid #f5f6fa;
+
 }
 
-#chat .bubble .content .avatar img {
-  height: 100%;
+.img_cont {
+  position: relative;
+  height: 70px;
+  width: 70px;
 }
 
-#chat .bubble .content .copy {
-  font-size: 1.1em;
-  line-height: 1.75;
-  color: #727678;
-  padding: 1.5em;
+.img_cont_msg {
+  height: 40px;
+  width: 40px;
+}
+
+.online_icon {
+  position: absolute;
+  height: 15px;
+  width: 15px;
+  background-color: #4cd137;
+  border-radius: 50%;
+  bottom: 0.2em;
+  right: 0.4em;
+  border: 1.5px solid white;
+}
+
+.offline {
+  background-color: #c23616 !important;
+}
+
+.user_info {
+  margin-top: auto;
+  margin-bottom: auto;
+  margin-left: 15px;
+}
+
+.user_info span {
+  font-size: 20px;
+  color: white;
+}
+
+.user_info p {
+  font-size: 10px;
+  color: rgba(255, 255, 255, 0.6);
+}
+
+.video_cam {
+  margin-left: 50px;
+  margin-top: 5px;
+}
+
+.video_cam span {
+  color: white;
+  font-size: 20px;
+  cursor: pointer;
+  margin-right: 20px;
+}
+
+.msg_cotainer {
+  margin-top: auto;
+  margin-bottom: auto;
+  margin-left: 10px;
+  border-radius: 25px;
+  background-color: #82ccdd;
+  padding: 10px;
+  position: relative;
+}
+
+.msg_cotainer_send {
+  margin-top: auto;
+  margin-bottom: auto;
+  margin-right: 10px;
+  border-radius: 25px;
+  background-color: #78e08f;
+  padding: 10px;
+  position: relative;
+}
+
+.msg_time {
+  position: absolute;
+  left: 0;
+  bottom: -15px;
+  color: rgba(255, 255, 255, 0.5);
+  font-size: 10px;
+}
+
+.msg_time_send {
+  position: absolute;
+  right: 0;
+  bottom: -15px;
+  color: rgba(255, 255, 255, 0.5);
+  font-size: 10px;
+}
+
+.msg_head {
+  position: relative;
+}
+
+#action_menu_btn {
+  position: absolute;
+  right: 10px;
+  top: 10px;
+  color: white;
+  cursor: pointer;
+  font-size: 20px;
+}
+
+.action_menu {
+  z-index: 1;
+  position: absolute;
+  padding: 15px 0;
+  background-color: rgba(0, 0, 0, 0.5);
+  color: white;
+  border-radius: 15px;
+  top: 30px;
+  right: 15px;
+  display: none;
+}
+
+.action_menu ul {
+  list-style: none;
+  padding: 0;
   margin: 0;
 }
 
-#chat .bubble .time {
-  font-weight: 200;
-  font-size: 0.8em;
-  clear: both;
-}
-
-#chat .bubble.attachment {
+.action_menu ul li {
   width: 100%;
-  position: relative;
-  margin: 5em 0;
-  clear: both;
+  padding: 10px 15px;
+  margin-bottom: 5px;
 }
 
-#chat .bubble.attachment .preview {
-  width: 15em;
-  border-radius: 0.5em;
-  overflow: hidden;
-  float: right;
-  box-shadow: 0px 9px 30px 0px rgba(50, 56, 107, 0.25);
-  position: absolute;
-  left: 2em;
-  bottom: 2em;
+.action_menu ul li i {
+  padding-right: 10px;
+
 }
 
-#chat .bubble.attachment .preview img {
-  width: 100%;
+.action_menu ul li:hover {
+  cursor: pointer;
+  background-color: rgba(0, 0, 0, 0.2);
 }
 
-#chat .bubble.client.attachment .content {
-  max-width: 80%;
-  min-height: 22em;
-  border-radius: 26px 26px 2px 26px;
-  padding: 2em 5em 2em 20em;
-}
-
-#chat .bubble.clint.attachment .content .title {
-  font-size: 21px;
-  color: #393F42;
-  letter-spacing: 0px;
-  font-weight: 400;
-}
-
-#chat .bubble.attachment .content .buttons_wrapper {
-  margin-top: 3em;
+@media(max-width: 576px) {
+  .contacts_card {
+    margin-bottom: 15px !important;
+  }
 }
