--- a/src/app/components/chat-feed/chat-feed.component.html
+++ b/src/app/components/chat-feed/chat-feed.component.html
@@ -45,7 +45,7 @@
         </div>
         <div class="d-flex justify-content-end mb-4"  *ngIf="msg.sentBy !== MyId">
           <div class="msg_cotainer_send">
-            {{currentChatUser.message}}
+            {{msg.message}}
             <span class="msg_time_send">8:55 AM, Today</span>
           </div>
           <div class="img_cont_msg">
