--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -6,4 +6,7 @@
    <div fxFlex="50%">
        <app-chat-feed></app-chat-feed>
    </div>
+   <div fxFlex="25%">
+      <app-activity></app-activity>
+   </div>
 </div>
