--- a/src/app/components/side-bar/side-bar.component.html
+++ b/src/app/components/side-bar/side-bar.component.html
@@ -16,7 +16,13 @@
      </mat-expansion-panel-header>
      <app-addfriend></app-addfriend>
   </mat-expansion-panel> 
-   
+
+  <mat-expansion-panel hidetoggle="true" >
+     <mat-expansion-panel-header>
+        구룹만들기
+     </mat-expansion-panel-header>
+     <app-mygroup></app-mygroup>
+  </mat-expansion-panel>    
   
   <mat-expansion-panel hidetoggle="true" >
      <mat-expansion-panel-header>
