--- a/src/app/components/myfriend/myfriend.component.html
+++ b/src/app/components/myfriend/myfriend.component.html
@@ -1,10 +1,11 @@
-<mat-list  style="cursor: pointer;">
+<mat-list  style="cursor: pointer;" *ngIf="isShow">
    <mat-list-item *ngFor="let user of friends; let i = index" 
         (click)="enterChat(user)">
      <img matListAvatar [src]="user.photoURL">
      <h3 matLine>{{user.displayName}}</h3>
      <p matLine>
-        <span class="presence" [ngClass]="{ 'online': user.status === 'online', 'offline': user.status === 'offline' }"></span>       
+        <span class="presence" [ngClass]="{ 'online': friendState[i]?.state === 'online', 'offline': friendState[i]?.state === 'offline' }"></span>       
      </p>
+      
    </mat-list-item>
 </mat-list>
