--- a/src/app/components/login-page/login-page.component.html
+++ b/src/app/components/login-page/login-page.component.html
@@ -8,7 +8,7 @@
                     <tr>
                         <td align="right" valign="top"><img [src]="'assets/images/login_id.png'" vspace="13"  /></td>
                         <td width="215" height="60" align="left" valign="top" style="padding-left:10px;">
-                            <input type="email"   placeholder="jung@test.com" 
+                            <input type="email"   placeholder="" 
                             formControlName="email" tabindex="1"
                             style="border:#ccc solid 1px; padding: .5715rem .8571rem; font-size:22px;">
                         </td>
@@ -27,7 +27,7 @@
                     <tr>
                         <td align="right"><img [src]="'assets/images/login_pw.png'"  /></td>
                         <td align="left" valign="top" style="padding-left:10px;">
-                            <input type="password" placeholder="PASSWORD" placeholder="123456"
+                            <input type="password" placeholder="PASSWORD" placeholder=""
                             formControlName="password" tabindex="2"
                             style="border:#ccc solid 1px; padding: .571rem .85rem; font-size:22px;">
                         </td>
