--- a/src/app/components/mygroup/mygroup.component.html
+++ b/src/app/components/mygroup/mygroup.component.html
@@ -7,7 +7,7 @@
             type="text" [(ngModel)]="groupName">
          </mat-form-field>        
 
-         <span matTooltip="구릅생성">
+         <span matTooltip="구룹생성">
            <button   mat-icon-button *ngIf="showAdd" (click)="createGroup()">
               <mat-icon color="primary">check</mat-icon>
            </button>
