--- a/src/app/components/activity/activity.component.html
+++ b/src/app/components/activity/activity.component.html
@@ -23,6 +23,7 @@
       <mat-panel-title>
          알림
       </mat-panel-title>
+      <app-notifications></app-notifications>
     </mat-expansion-panel-header>
      
   </mat-expansion-panel>
